--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   cupertino_icons: ^1.0.8
   flutter_animate: ^4.5.2
   provider: ^6.1.5
+  flutter_otp_text_field: ^1.5.1+1
 
 dev_dependencies:
   flutter_test:
