--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,13 @@ dependencies:
   flutter_animate: ^4.5.2
   provider: ^6.1.5
   flutter_otp_text_field: ^1.5.1+1
+  firebase_core: ^3.15.1
+  cloud_firestore: ^5.6.11
+  firebase_auth: ^5.6.2
+  firebase_storage: ^12.4.9
+  dotted_border: ^3.1.0
+  photo_view: ^0.15.0
+  cached_network_image: ^3.4.1
 
 dev_dependencies:
   flutter_test:
