--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,8 @@ dependencies:
   dotted_border: ^3.1.0
   photo_view: ^0.15.0
   cached_network_image: ^3.4.1
+  file_picker: ^10.2.0
+  delightful_toast: ^1.1.0
 
 dev_dependencies:
   flutter_test:
