bottom sheet and more contents

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   cached_network_image: ^3.4.1
   file_picker: ^10.2.0
   delightful_toast: ^1.1.0
+  modal_bottom_sheet: ^3.0.0
 
 dev_dependencies:
   flutter_test:
