image picker bug

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,9 +42,9 @@ dependencies:
   firebase_auth: ^5.6.2
   firebase_storage: ^12.4.9
   dotted_border: ^3.1.0
+  image_picker: ^1.1.2
   photo_view: ^0.15.0
   cached_network_image: ^3.4.1
-  file_picker: ^10.2.0
   delightful_toast: ^1.1.0
   modal_bottom_sheet: ^3.0.0
 
