--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,8 @@ dependencies:
   cached_network_image: ^3.4.1
   delightful_toast: ^1.1.0
   modal_bottom_sheet: ^3.0.0
+  curved_navigation_bar: ^1.0.6
+  url_launcher: ^6.3.2
 
 dev_dependencies:
   flutter_test:
