--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,8 @@ dependencies:
   modal_bottom_sheet: ^3.0.0
   curved_navigation_bar: ^1.0.6
   url_launcher: ^6.3.2
+  firebase_messaging: ^15.2.9
+  flutter_slidable: ^4.0.0
 
 dev_dependencies:
   flutter_test:
