--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,7 @@ dependencies:
   url_launcher: ^6.3.2
   firebase_messaging: ^15.2.9
   flutter_slidable: ^4.0.0
+  flutter_credit_card: ^4.1.0
 
 dev_dependencies:
   flutter_test:
