card ui controller

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -58,7 +58,6 @@ dependencies:
   hive: ^2.2.3
   hive_flutter: ^1.1.0
   path_provider: ^2.1.5
-  flutter_secure_storage: ^4.2.1
 
 dev_dependencies:
   flutter_test:
@@ -88,6 +87,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/
+    - assets/cards/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
